[package]
name = "opencli"
version = "0.1.0"
authors = ["Matthias Baer <matthiasbaer@bluewin.ch>"]
description = "OpenCLI struct definitions for serializing and deserializing"
keywords = ["opencli", "schema"]
repository = "https://github.com/FantasyTeddy/opencli"
documentation = "https://docs.rs/opencli"
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
